--- a/Cordova schoolHouse app/www/welcome.html
+++ b/Cordova schoolHouse app/www/welcome.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+
+            LAST MINUTE ADDITION PAGE
+
+            NY team is worried the kids will be too stupid to figure out the camera on their own, so we're adding a page that will give them the choice between the tutorial and the regular school. Kids that have already seen the tutorial will just go to the school, kids that haven't will hopefully choose the tutorial. This also gets rid of the "Play tutorial but only on first launch", which may well be a test launch and the judges don't ever see the tutorial to begin with.
+
+            Ideally, this would be build into the XML. But I've got 2 days so I'll just do this custome and worry later.
+-->
 <html>
     <head>
         <script>
