--- a/Cordova schoolHouse app/www/subject.html
+++ b/Cordova schoolHouse app/www/subject.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         </script>
         <script src="js/navHandler.js"></script>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <script src="cordova.js"></script>
         <link rel="stylesheet" href='css/webix.css' />
         <link rel="stylesheet" href='css/all.css' />
@@ -28,7 +28,11 @@ and open the template in the editor.
         <script src="js/readWrite.js"></script>
         <script src="js/getAbsLoc.js"></script>
         <script src="js/viewSubject.js"></script>
+        <script src="js/checkDownloadAndGo.js"></script>
         <script src="js/loginCheck.js"></script>
+
+        <script src="js/analytics.js"></script>
+        <script src="js/JSONC.js"></script>
         <link rel="stylesheet" href='css/webix.css' />
         <link rel="stylesheet" href='css/subjectPage.css' />
     </head>
