--- a/Cordova schoolHouse app/www/login.html
+++ b/Cordova schoolHouse app/www/login.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
 	<script>
@@ -26,6 +20,9 @@ and open the template in the editor.
 	<script src="js/readWrite.js"></script>
 	<script src="js/debugLog.js"></script>
 	<script src="js/login.js"></script>
+        
+        <script src="js/analytics.js"></script>
+        <script src="js/JSONC.js"></script>
 	<style>
 	    .userBlock > .webix_view {
 		background-color:RGBA(0,0,0,0)!important;
