Small update to english content.
Spelling correction to the Barracuda video in Epic Quest, audio file rename in NumbDrums json.

--- a/Cordova schoolHouse app/EnglishWebRoot/school/Epic Quest/variable-E_EQ_T5_NumbDrums_V2-E_EQ_T5_NumbDrums.html
+++ b/Cordova schoolHouse app/EnglishWebRoot/school/Epic Quest/variable-E_EQ_T5_NumbDrums_V2-E_EQ_T5_NumbDrums.html
@@ -5258,8 +5258,8 @@
                     "fSrc": false,
                     "loaded": false,
                     "errored": false,
-                    "fName": "P_M_drum",
-                    "relPathNoExt": "sharedAssets/P_M_drum.ogg"
+                    "fName": "P_M_Drum",
+                    "relPathNoExt": "sharedAssets/P_M_Drum.ogg"
                 },
                 {
                     "ext": false,
@@ -5292,7 +5292,7 @@
                 "P_drum pattern reveal": 59,
                 "P_L Drum": 71,
                 "P_S_Drum": 72,
-                "P_M_drum": 73,
+                "P_M_Drum": 73,
                 "P_Small Drum Unlock": 75,
                 "P_Large Drum Unlock": 76
             },
@@ -15590,7 +15590,7 @@
                                         "id": "tid356",
                                         "type": "audio",
                                         "action": "play",
-                                        "destination": "P_M_drum",
+                                        "destination": "P_M_Drum",
                                         "blocking": false,
                                         "hold": "audios"
                                     }
